kubernetes/duo/duo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: duo
  template:
    metadata:
      labels:
        app: duo
    spec:
      containers:
      - name: duo
        image: vaishnavi2002/duo:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: duo
spec:
  type: LoadBalancer
  selector:
    app: duo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duo
            port:
              number: 80
